turmites.lessons.turmites.langton.Langton.scala.code
def step() 
{
  if (getCouleurSol()==black) 
  {
    peindreBlanc()
    gauche()
    avance()
  }
  if (getCouleurSol()==Color.white) 
  {
    peindreNoir()
    droite()
    avance()
  }
}

def peindre() 
{
  baisseBrosse()
  leveBrosse()
}

def peindreNoir() 
{
  setCouleurBrosse(Color.black)
  peindreNoir()
}

def peindreBlanc() 
{
  setCouleurBrosse(Color.white)
  peindreNoir()
}